--- a/flutter_common_module/pubspec.yaml
+++ b/flutter_common_module/pubspec.yaml
@@ -34,7 +34,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.2
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
+  cloud_firestore: ^ 5.5.1
+  fluttertoast: ^8.2.1
+  image_picker: ^1.0.7
+  shared_preferences: ^2.2.2
+  firebase_storage: ^12.3.7
+  firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^16.3.2
+  photo_view: ^0.14.0
+  provider: ^6.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
