--- a/react-app-base/public/web/manifest.json
+++ b/react-app-base/public/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_chat_demo",
-    "short_name": "flutter_chat_demo",
+    "name": "flutter_common_module",
+    "short_name": "flutter_common_module",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
